[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/DevTools/V2/DevToolsV2.gd" type="Script" id=2]
[ext_resource path="res://UI/DevTools/V2/BottomPanel.gd" type="Script" id=3]
[ext_resource path="res://UI/DevTools/V2/SpawnMenu.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 12.6491

[node name="DevToolsV2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 353.0 ]
}

[node name="BottomPanel" type="TabContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
tab_align = 0
script = ExtResource( 3 )

[node name="Spawn menu" type="Control" parent="BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Time" type="Control" parent="BottomPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 64.0
margin_bottom = 28.0

[node name="pointer" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="pointer"]
scale = Vector2( 0.001, 0.001 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="pointer"]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="SelectedEntityData" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Background" type="Panel" parent="SelectedEntityData"]
margin_right = 249.0
margin_bottom = 112.0

[node name="BottomPanelMenus" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="SpawnMenu" type="Control" parent="BottomPanelMenus"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Background" type="Panel" parent="BottomPanelMenus/SpawnMenu"]
margin_top = 285.0
margin_right = 290.0
margin_bottom = 564.0

[node name="Label" type="Label" parent="BottomPanelMenus/SpawnMenu"]
margin_left = 11.0
margin_top = 295.0
margin_right = 78.0
margin_bottom = 309.0
text = "Object list"

[node name="Selection" type="Control" parent="BottomPanelMenus/SpawnMenu"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -43, 318 )

[node name="Rat" type="ColorRect" parent="BottomPanelMenus/SpawnMenu/Selection"]
visible = false
margin_left = 9.0
margin_top = 311.0
margin_right = 118.0
margin_bottom = 335.0
color = Color( 0, 1, 0.109804, 1 )

[node name="Burger" type="ColorRect" parent="BottomPanelMenus/SpawnMenu/Selection"]
visible = false
margin_left = 9.0
margin_top = 335.0
margin_right = 118.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 48, -34 )
color = Color( 0, 1, 0.109804, 1 )

[node name="ColorRect3" type="ColorRect" parent="BottomPanelMenus/SpawnMenu/Selection"]
visible = false
margin_left = 9.0
margin_top = 359.0
margin_right = 118.0
margin_bottom = 383.0
rect_pivot_offset = Vector2( 35, -21 )
color = Color( 0, 1, 0.109804, 1 )

[node name="ColorRect4" type="ColorRect" parent="BottomPanelMenus/SpawnMenu/Selection"]
visible = false
margin_left = 9.0
margin_top = 383.0
margin_right = 118.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 55, 12 )
color = Color( 0, 1, 0.109804, 1 )

[node name="ObjectList" type="ScrollContainer" parent="BottomPanelMenus/SpawnMenu"]
margin_left = 11.0
margin_top = 313.0
margin_right = 181.0
margin_bottom = 549.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanelMenus/SpawnMenu/ObjectList"]
margin_right = 54.0
margin_bottom = 44.0

[node name="Rat" type="Button" parent="BottomPanelMenus/SpawnMenu/ObjectList/VBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "Rat"

[node name="Burger" type="Button" parent="BottomPanelMenus/SpawnMenu/ObjectList/VBoxContainer"]
margin_top = 24.0
margin_right = 54.0
margin_bottom = 44.0
text = "Burger"

[node name="Separator" type="ColorRect" parent="BottomPanelMenus/SpawnMenu"]
margin_left = 192.0
margin_top = 293.0
margin_right = 194.0
margin_bottom = 556.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="ItemList" type="ItemList" parent="BottomPanelMenus/SpawnMenu"]
visible = false
margin_left = 11.0
margin_top = 314.0
margin_right = 181.0
margin_bottom = 553.0

[node name="Rat" type="Button" parent="BottomPanelMenus/SpawnMenu/ItemList"]
margin_right = 105.0
margin_bottom = 20.0
text = "Rat"

[node name="Burger" type="Button" parent="BottomPanelMenus/SpawnMenu/ItemList"]
margin_top = 24.0
margin_right = 105.0
margin_bottom = 44.0
text = "Burger"

[node name="LaCreatura" type="Button" parent="BottomPanelMenus/SpawnMenu/ItemList"]
margin_top = 48.0
margin_right = 105.0
margin_bottom = 68.0
text = "LaCreatura"

[node name="SunTingWong" type="Button" parent="BottomPanelMenus/SpawnMenu/ItemList"]
margin_top = 72.0
margin_right = 105.0
margin_bottom = 92.0
text = "Sun Ting Wong"

[node name="Options" type="Control" parent="BottomPanelMenus/SpawnMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Team" type="Control" parent="BottomPanelMenus/SpawnMenu/Options"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="BottomPanelMenus/SpawnMenu/Options/Team"]
margin_left = 202.0
margin_top = 295.0
margin_right = 242.0
margin_bottom = 309.0
rect_pivot_offset = Vector2( 101, 50 )
text = "Team"

[node name="Value" type="Label" parent="BottomPanelMenus/SpawnMenu/Options/Team"]
margin_left = 202.0
margin_top = 312.0
margin_right = 242.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 101, 50 )
text = "0"

[node name="HSlider" type="HSlider" parent="BottomPanelMenus/SpawnMenu/Options/Team"]
margin_left = 202.0
margin_top = 328.0
margin_right = 267.0
margin_bottom = 344.0
max_value = 2.0

[node name="TimeMenu" type="Control" parent="BottomPanelMenus"]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="tab_changed" from="BottomPanel" to="BottomPanel" method="_on_BottomPanel_tab_changed"]
[connection signal="pressed" from="BottomPanelMenus/SpawnMenu/ObjectList/VBoxContainer/Rat" to="BottomPanelMenus/SpawnMenu" method="_on_Rat_pressed"]
[connection signal="pressed" from="BottomPanelMenus/SpawnMenu/ObjectList/VBoxContainer/Burger" to="BottomPanelMenus/SpawnMenu" method="_on_Burger_pressed"]
[connection signal="value_changed" from="BottomPanelMenus/SpawnMenu/Options/Team/HSlider" to="BottomPanelMenus/SpawnMenu" method="_on_HSlider_value_changed"]
